--- a/package.json
+++ b/package.json
@@ -98,6 +98,8 @@
     "mocha": "^10.2.0",
     "rollup": "^2.78.1",
     "rollup-plugin-css-only": "^4.3.0",
+    "rollup-plugin-import-css": "^3.2.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.4",
     "svelte": "^3.59.1",
     "svelte-preprocess": "^5.0.3",
