feat: added api call on debug

--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
       },
       {
         "command": "code-fundi.codeDebug",
-        "title": "Debug"
+        "title": "Debug selection"
       }
     ],
     "menus": {
