--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "snarkdown": "^2.0.0"
+    "snarkdown": "^2.0.0",
+    "svelte-loading-spinners": "^0.3.4"
   }
 }
