feat: emoji update

--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "submenus": [
       {
         "id": "code-fundi.submenu",
-        "label": "✨Code Fundi"
+        "label": "👷‍♂️ Code Fundi"
       }
     ]
   },
