--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,8 +1,9 @@
 .vscode/**
 .vscode-test/**
-out/**
 node_modules/**
 src/**
+out/test/**
+.env.local
 .gitignore
 .yarnrc
 webpack.config.js
@@ -11,3 +12,4 @@ vsc-extension-quickstart.md
 **/.eslintrc.json
 **/*.map
 **/*.ts
+**/*.vsix
